--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,7 +7,7 @@
 <body>
 	<nav class="navbar">
 			<div class="navbar-header">
-			 <a class="navbar-brand" href="#">IISlabPIO</a>
+			 <a class="navbar-brand" href="#">IISlabPIO </a>
 		 </div>
 		 <div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
@@ -21,7 +21,7 @@
     		<h3 class="panel-title">Systemy kontroli wersji</h3>
 	  	</div>
   		<div class="panel-body">
-    		System kontroli wersji (ang. version/revision control system) – oprogramowanie służące do śledzenia zmian głównie w kodzie źródłowym oraz pomocy programistom w łączeniu zmian dokonanych w plikach przez wiele osób w różnych momentach czasowych.
+    		System kontroli wersji (ang. version/revision control system) – oprogramowanie służące do do śledzenia zmian głównie w kodzie źródłowym oraz pomocy programistom w łączeniu zmian dokonanych w plikach przez wiele osób w różnych momentach czasowych.
   		</div>
 		<footer class="panel-footer">
 			<a href="http://pl.wikipedia.org/wiki/System_kontroli_wersji">Wikipedia</a>
@@ -38,6 +38,17 @@
 			<a href="http://git-scm.com/book/pl/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji#Rozproszone-systemy-kontroli-wersji">Git - podręcznik</a>
 		</footer>
 	</section>
+<section id="section3" class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Scentralizowany system kontroli wersji.</h3>
+                  </div>
+                  <div class="panel-body">
+                    Section3 content
+                  </div>
+                <footer class="panel-footer">
+                        Section3 footer
+                </footer>
+</section>
 	<footer  class="navbar">
 		Opracowane na zajęciach "Podstawy systemu Git" w ramach laboratorium z Podstaw Inżynierii Oprogramowania w <a href="http://www.iis.p.lodz.pl/">Instytucie Informatyki Stosowanej PŁ</a>
 	</footer>
